# ai-driven-personalization-platform

./: .env  .gitignore  Dockerfile  README.md  architecture.md  docker-compose.yml  pyproject.toml  requirements.txt  scaling_plan.md
data/: sample_conversations.json
src/: __init__.py  streamlit_app.py
src/api/: main.py  recommendations.py
src/db/: __init__.py  milvus_client.py  mongodb.py  neo4j_client.py  redis_client.py  sqlite_analytics.py
src/pipeline/: __init__.py  dag.py  embeddings.py  ingest.py  stores.py
src/utils/: __init__.py  config.py  logger.py  observability.py  schemas.py
