[project]
name = "personalization-platform"
version = "0.1.0"
description = "Mini data platform for real-time personalization (vector + graph + analytics)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "pymongo>=4.5",
    "pymilvus>=2.3.0",
    "neo4j>=5.14.0",
    "redis>=5.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "structlog>=23.2.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
